2015-10-30 Added reset command in True False module
2015-10-30 Added new module Programmed Drawing
2015-10-30 Fixed displaying correct and wrong icons in Coloring module
2015-10-28 Fixed issue after drop gap to filledDraggableGap in Text module
2015-10-28 Added calling functionality by command in Lesson Reset module
2015-10-28 Fixed issue with checking attempted modules in Sumbit and Assesment Navigation Bar modules
2015-10-28 Added new command markGapAsEmpty to dropdowngaps in Text module
2015-10-26 Fixed displaying data on Firefox in Count and Graph module
2015-10-22 Fixed addon properties types (from file to audio and image). Introduced new property type - video
2015-10-22 Fixed styling module in Show Answers mode in Count and Graph module
2015-10-21 Fixed book view configuration
2015-10-19 Added new property Clear placeholder on focus to Text module
2015-10-15 Fixed issue with state in Assessments Navigation Bar module
2015-10-13 Added possibility move to common page in GoToPage Module
2015-10-12 Added disabled events configuration.
2015-10-09 Fixed displaying data in LearnPen Data module
2015-10-09 Fixed issue with active tools after changing lesson page in IWB Toolbar module
2015-10-09 Fixed sending notAllAttempted event in Submit module
2015-10-09 Added commands markOptionAs... and new classes on their execute to Choice module
2015-10-09 Added property Is not an activity in Count and Graph module
2015-10-08 Added commands show/hide in Submit module
2015-10-07 Fixed setting visibility and added new version of Swiffy library in Swiffy Animation module
2015-10-06 Fixed problem with displaying data in Graph module
2015-10-05 Fixed isAttempted action in Image Gap module
2015-10-05 Added isAllOK command to Table module
2015-10-05 Added support for calculating time that user spent on each page to PlayerUtils
2015-10-02 Fixed problem with displaying percentage score in LearnPen Report module
2015-09-30 Added increaseMistakeCounter command